...
            android:layout_marginTop="200dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="200dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/curJobButton_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Enter/Edit Current Job" />

            <Button
...
